objects/TIMBASURVEYS__Branches__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnswerOption</label>
        <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IsPageBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPageBranch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__OptionBranchingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OptionBranchingRule</label>
        <referenceTo>TIMBASURVEYS__OptionBranchingRule__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__PageBranchingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageBranchingRule</label>
        <referenceTo>TIMBASURVEYS__PageBranchingRule__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionBranchingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionBranchingRule</label>
        <referenceTo>TIMBASURVEYS__QuestionBranchingRule__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>